--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ input {
   font-size: 16px;
   width: 200px;
   border-radius: 12px;
-  border: 1px solid rgb(179, 175, 175);
+  border: 1px solid #b3afaf;
 }
 
 button {
@@ -47,7 +47,7 @@ button {
   margin-top: 20px;
   padding: 20px;
   border-radius: 15px;
-  background-color: rgba(15, 126, 170, 0.7);
+  background-color: #0f7eaab3;
   display: none;
 }
 
